--- a/Login/app/src/main/res/layout/activity_homepage.xml
+++ b/Login/app/src/main/res/layout/activity_homepage.xml
@@ -16,8 +16,8 @@
 
         <ImageButton
             android:id="@+id/button1"
-            android:layout_width="67dp"
-            android:layout_height="41dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_20"
             android:layout_weight="1"
             android:background="@drawable/ic_tinder2"
@@ -25,9 +25,9 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/button2"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:id="@+id/likes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_20"
             android:layout_weight="1"
             android:background="@drawable/ic_shining"
@@ -36,17 +36,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/button3"
-            android:layout_width="54dp"
-            android:layout_height="41dp"
+            android:id="@+id/messges"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_20"
             android:layout_weight="1"
-            android:background="@drawable/ic_conversation"
+            android:background="@drawable/ic_chat"
             app:layout_constraintEnd_toStartOf="@+id/button4"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/button4"
+            android:id="@+id/account"
             android:layout_width="66dp"
             android:layout_height="58dp"
             android:layout_margin="@dimen/dp_20"
@@ -63,7 +63,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
