--- a/Login/app/src/main/res/values/colors.xml
+++ b/Login/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="tinder_theme">#FD5068</color>
+    <color name="light_grey">#EDEDEB</color>
 </resources>
