--- a/Login/app/src/main/res/layout/activity_accountpage.xml
+++ b/Login/app/src/main/res/layout/activity_accountpage.xml
@@ -6,61 +6,70 @@
     android:layout_height="match_parent"
     tools:context=".accountpage">
 
-    <LinearLayout
-        android:id="@+id/row1"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <ImageButton
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
+        android:id="@+id/cardView1"
+        android:elevation="@dimen/dp_20"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/row1"
+            android:layout_width="match_parent"
+            android:weightSum="4"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_20"
-            android:layout_weight="1"
-            android:background="@drawable/ic_tinder2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            >
 
-        <ImageButton
-            android:id="@+id/likes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_20"
-            android:layout_weight="1"
-            android:background="@drawable/ic_shining"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
-            app:layout_constraintStart_toEndOf="@+id/button1"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageButton
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="@dimen/dp_20"
+                android:layout_marginEnd="@dimen/dp_20"
+                android:layout_weight="1"
+                android:background="@drawable/ic_tinder2"
+                />
 
-        <ImageButton
-            android:id="@+id/messges"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_20"
-            android:layout_weight="1"
-            android:background="@drawable/ic_chat"
-            app:layout_constraintEnd_toStartOf="@+id/button4"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageButton
-            android:id="@+id/account"
-            android:layout_width="66dp"
-            android:layout_height="58dp"
-            android:layout_margin="@dimen/dp_20"
-            android:layout_weight="1"
-            android:background="@drawable/ic_baseline_person_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageButton
+                android:id="@+id/likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="@dimen/dp_20"
+                android:layout_weight="1"
+                android:background="@drawable/ic_shining"
+                />
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/messages"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="@dimen/dp_20"
+                android:layout_marginEnd="@dimen/dp_20"
+                android:layout_weight="1"
+                android:background="@drawable/ic_chat"
+                />
+
+            <ImageButton
+                android:id="@+id/account"
+                android:layout_width="66dp"
+                android:layout_height="58dp"
+                android:layout_marginEnd="@dimen/dp_20"
+                android:layout_weight="1"
+                android:background="@drawable/personcoloricon"
+                />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
     <LinearLayout
         android:id="@+id/row2"
         android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/row1"
+        app:layout_constraintTop_toBottomOf="@+id/cardView1"
         android:layout_height="wrap_content">
         <ImageView
             android:layout_width="100dp"
@@ -153,7 +162,7 @@
             android:layout_marginLeft="5dp"
             android:text="@string/text_photo"
             android:gravity="center"
-            android:drawableEnd="@drawable/ic_plus"
+            android:drawableEnd="@drawable/ic_add"
             android:paddingEnd="@dimen/dp_20"
             android:textColor="@color/white"/>
     </LinearLayout>
@@ -168,30 +177,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/row6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:drawableStart="@drawable/ic_heart"
-                android:text="@string/text_increase"
                 android:layout_marginLeft="100dp"
+                android:drawableStart="@drawable/ic_heart"
                 android:drawablePadding="10dp"
+                android:text="@string/text_increase"
                 android:textColor="@color/black"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/text_get"
-                android:layout_marginBottom="30dp"
                 android:layout_marginLeft="@dimen/dp_100"
-                android:textStyle="bold"
-                android:textSize="@dimen/sp_18"/>
+                android:layout_marginBottom="30dp"
+                android:text="@string/text_get"
+                android:textSize="@dimen/sp_18"
+                android:textStyle="bold" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
