--- a/Login/app/src/main/res/layout/activity_mobile_number_page.xml
+++ b/Login/app/src/main/res/layout/activity_mobile_number_page.xml
@@ -47,9 +47,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_user_name"
+        android:drawableStart="@drawable/ic_baseline_person_24"
+        android:drawablePadding="20dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
         app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
+        android:paddingStart="@dimen/dp_20"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
@@ -60,11 +62,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:paddingStart="50dp"
         android:paddingEnd="50dp"
-        android:gravity="center"
-        android:layout_marginEnd="30dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintStart_toEndOf="@+id/editTextNumber"
         android:hint="@string/enter_mobile_number"
         android:inputType="phone"
@@ -78,8 +78,9 @@
         android:layout_marginBottom="68dp"
         android:gravity="center"
         android:inputType="number"
+        android:layout_marginEnd="10dp"
         android:layout_marginStart="30dp"
-        android:text="@string/in_91"
+        android:hint="@string/in_91"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -88,8 +89,9 @@
     android:layout_width="356dp"
     android:layout_height="53dp"
     android:layout_marginTop="68dp"
-    android:layout_marginStart="25dp"
+    android:layout_marginStart="30dp"
     android:layout_marginEnd="25dp"
+        android:gravity="center"
     android:text="@string/text_info"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.494"
@@ -102,6 +104,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
+        android:gravity="center"
         android:text="@string/text_info_highlighted"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Tvbtncontinue"
