--- a/Login/app/src/main/res/values/colors.xml
+++ b/Login/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="tinder_theme">#FD5068</color>
     <color name="light_grey">#EDEDEB</color>
+    <color name="gold">#FCCA06</color>
 </resources>
