--- a/Login/app/src/main/res/layout/activity_facebook_login.xml
+++ b/Login/app/src/main/res/layout/activity_facebook_login.xml
@@ -53,6 +53,7 @@
         />
     <TextView
         android:layout_width="wrap_content"
+        android:id="@+id/tvForgotPassword"
         android:layout_height="wrap_content"
         android:text="Forgot Password?"
         android:textSize="25dp"
@@ -62,11 +63,14 @@
         android:layout_marginVertical="650dp"
         />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_toRightOf="@+id/tvForgotPassword"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/dp_20"
+        android:layout_marginBottom="35dp"
         android:background="@drawable/ic_quetionmark"
-        android:layout_marginVertical="660dp"
-        android:layout_marginHorizontal="350dp"
+
         />
 
 </RelativeLayout>
