--- a/Login/app/src/main/res/layout/activity_google_log_in_page.xml
+++ b/Login/app/src/main/res/layout/activity_google_log_in_page.xml
@@ -30,18 +30,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/btnGoogleuser"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/google"
-        android:background="#176BEF"
+        android:layout_margin="@dimen/dp_20"
+        android:background="@drawable/rect_btn_google"
+        android:drawablePadding="10dp"
+        android:padding="10dp"
+        android:text="@string/log_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.229" />
+        app:layout_constraintVertical_bias="0.217" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -63,7 +66,7 @@
         android:layout_marginTop="176dp"
         android:paddingStart="100dp"
         android:paddingEnd="100dp"
-        android:hint="Enter Password"
+        android:hint="@string/enter_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
