--- a/Login/app/src/main/res/values/dimen.xml
+++ b/Login/app/src/main/res/values/dimen.xml
@@ -4,6 +4,14 @@
     <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_5">5dp</dimen>
     <dimen name="sp_18">18sp</dimen>
+    <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_150">150dp</dimen>
+    <dimen name="sp_20">20sp</dimen>
+    <dimen name="sp_30">30sp</dimen>
+    <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_40">40dp</dimen>
+    <dimen name="dp_50">50dp</dimen>
+
+
 </resources>
