--- a/Login/app/src/main/res/layout/activity_accountpage.xml
+++ b/Login/app/src/main/res/layout/activity_accountpage.xml
@@ -7,7 +7,7 @@
     tools:context=".accountpage">
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -114,7 +114,7 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_edit_image" />
+            android:src="@drawable/ic_camera" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/row4"
@@ -270,4 +270,6 @@
         android:textColor="#FD5068"
         android:text="@string/text_my"/>
  </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
